--- a/Website Source/index.html
+++ b/Website Source/index.html
@@ -7,12 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Google Webfonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Open+Sans|Roboto|Staatliches" rel="stylesheet">
 
     <title>Interactive map for Christmas Trees</title>
   </head>
@@ -42,10 +42,36 @@
         </div>
     </nav>
 
-      <section id="intro"
+      <section id="intro">
           <div class="container-fluid">
               <div class="row">
-                  <h1>Hello, world!</h1>
+                  <h1 class="text-center w-100 d-block mx-auto inverse" id="intro-title">Christmas Tree Locator</h1>
+                  <h3 class="inverse">What is it?</h3>
+                  <p>
+                      This piece of software allows employees to quickly locate trees that have been chosen
+                      by customers to be cut down for them this Christmas.
+                  </p>
+                  <p>
+                      The software allows employees to view details such as the height of the tree, the colour
+                      of the label, and the date of which it should be cut on.
+                  </p>
+
+                  <h3 class="inverse">How do I use It?</h3>
+                  <p>
+                      To access the map, <a href="#map">Scroll down to the Map</a>. This will have loaded all customer trees and placed
+                      them on the map with a map marker.
+                  </p>
+                  <p>
+                      To view details for each tree, click on it's marker. Here you will be shown relevant information for that tree.
+                      To close the information panel, click on the "x" icon in the top right corner.
+                  </p>
+                  <p>
+                      If you are logged in, you will be able to use the edit functions of the software to make changes to
+                      tree information. You'll need your randomly generated 4 digit login pin to do so.
+                      <br>
+                      If you do not have a login, please <a href="">Register here</a>
+                  </p>
+
               </div>
           </div>
       </section>
