--- a/Website Source/index.html
+++ b/Website Source/index.html
@@ -19,26 +19,35 @@
   <body>
       <!-- Navbar -->
     <nav class="navbar navbar-dark bg-primary navbar-expand-md justify-content-center">
-        <a href="/" class="navbar-brand mr-0">TomMaddoxSoftware</a>
+
         <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
-            <span class="navbar-toggler-icon"></span>
+            Menu <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
-            <ul class="navbar-nav mx-auto text-center">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
-                <li class="nav-item"><a class="nav-link" href=""><i class="fab fa-facebook mr-1"></i></a> </li>
-                <li class="nav-item"><a class="nav-link" href=""><i class="fab fa-twitter"></i></a> </li>
-            </ul>
+        <div class="navbar-collapse collapse" id="collapsingNavbar2">
+            <div class="col-lg-3">
+                <a class="navbar-brand">TomMaddoxSoftware</a>
+            </div>
+            <div class="col-lg-6">
+                <ul class="navbar-nav mx-auto justify-content-center text-center">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-3">
+                <ul class="nav navbar-nav ml-auto" id="social-list">
+                    <li class="nav-item ml-auto">
+                        <a class="nav-link" href=""><i class="fab fa-facebook"></i></a>
+                        <a class="nav-link" href=""><i class="fab fa-twitter"></i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
