--- a/Website Source/index.html
+++ b/Website Source/index.html
@@ -84,15 +84,29 @@
               </div>
           </div>
       </section>
+      <section id="map">
+          <div class="container-fluid">
+              <div class="row">
+                  <div id="livemap"></div>
+              </div>
+          </div>
+      </section>
 
 
 
     <!-- Load script files at bottom of page for loading speed purposes -->
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="vendor/pouchDB/pouchdb-7.0.0.min.js"></script>
+
+    <!-- Google Maps with API key --->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfXFGcdptb_boFKX4VGwadzAwJWznXr-c&callback=initMap"
+    type="text/javascript"></script>
+
+    <!-- Custom JS files -->
+    <script src="assets/js/db.js"></script>
+    <script src="assets/js/map.js"></script>
+
   </body>
 </html>
