--- a/Website Source/index.html
+++ b/Website Source/index.html
@@ -12,7 +12,7 @@
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Google Webfonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Open+Sans|Roboto|Staatliches" rel="stylesheet">
 
@@ -142,7 +142,7 @@
     type="text/javascript"></script>
 
     <!-- Custom JS files -->
-    <script src="assets/js/map.js"></script>
+    <script src="js/map.js"></script>
 
 </body>
 </html>
