--- a/Website Source/index.html
+++ b/Website Source/index.html
@@ -105,7 +105,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="ModalTitle">Add New Tree</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick='ResetModal()'>
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
