--- a/Website Source/signup.html
+++ b/Website Source/signup.html
@@ -10,7 +10,7 @@
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Google Webfonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Open+Sans|Roboto|Staatliches" rel="stylesheet">
 
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="signup.html">Register/Login</a>
+                        <a class="nav-link" href="signup.html">Register</a>
                     </li>
                 </ul>
             </div>
@@ -49,10 +49,30 @@
     </nav>
 
     <section id="main">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
-                <h1 class="text-center w-100 d-block mx-auto inverse" id="intro-title">Christmas Tree Locator</h1>
-
+                <h1 class="text-center w-100 d-block m-5 mx-auto" id="intro-title">Register</h1>
+                <div class="card col-sm-6 mx-auto">
+                    <div class="card-header">
+                        Register
+                    </div>
+                    <div class="card-body">
+                        <div id="alert"></div>
+                        <h5 class="card-title">Create your account</h5>
+                        <p class="card-text">We just need some details first...</p>
+                        <div class="form-wrap">
+                            <div class="form-group">
+                                <label for="first_name">First Name:</label>
+                                <input type="text" id="first_name" class="form-control">
+                            </div>
+                            <div>
+                                <label for="last_name">Last Name:</label>
+                                <input type="text" id="last_name" class="form-control">
+                            </div>
+                        </div>
+                        <a id="registerBtn" class="btn btn-primary m-3 d-block mx-auto">Register</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -62,6 +82,35 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>s
+    <script>
+    $('#registerBtn').click(function(){
+        var firstName = $('#first_name').val().toString();
+        var lastName = $('#last_name').val().toString();
 
+        $.ajax({
+            url: "http://localhost:9000/register",
+            type: "POST",
+            data: {"first_name": firstName, "last_name": lastName },
+            success: function(result) {
+                response = JSON.parse(result);
+
+                var alert = $('#alert');
+
+                switch(response.status) {
+                    case "success":
+                        alert.removeClass();
+                        alert.addClass("alert alert-success");
+                        alert.html("Registration success! Your login code is: " + response.login);
+                    break;
+                    case "error":
+                        alert.removeClass();
+                        alert.addClass("alert alert-danger");
+                        alert.html("An error occured: " + response.reason);
+                    break;
+                }
+            }
+        });
+    });
+    </script>
 </body>
 </html>
